test/fail/enums_and_variants/enum_too_few_variants.lly
#[
SyntaxError: An enum must have at least two variants.
    from enum_too_few_variants.lly:8
]#

enum Option[A] {
	Some(A)
}
